--- a/Main.xaml
+++ b/Main.xaml
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1240,863</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1240,878</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Main2_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="68">
@@ -95,7 +95,7 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <StateMachine InitialState="{x:Reference __ReferenceID9}" sap2010:Annotation.AnnotationText="[FFR Automation]&#xA;[Creation of FFR Automation Using RE Framework]&#xA;[Update The Config File If Path is Changed for Any Data]" DisplayName="General Business Process - FFR Automation REFramework" sap:VirtualizedContainerService.HintSize="973,798" sap2010:WorkflowViewState.IdRef="StateMachine_1">
+  <StateMachine InitialState="{x:Reference __ReferenceID9}" sap2010:Annotation.AnnotationText="[FFR Automation]&#xA;[Creation of FFR Automation Using RE Framework]&#xA;[1.) Add All The Data to the Added Data Folder, 2.) Do not Touch the Intermediate Data Folder, 3.) After the Automation is completed all the data will get added to Final Folder,]&#xD;&#xA;[4.) Update the Config File Only for Added Data Rest Data keep it same, 5.) Dont Touch Any of the File Path Until and Unless it is very much necessary.]" DisplayName="General Business Process - FFR Automation REFramework" sap:VirtualizedContainerService.HintSize="973,813" sap2010:WorkflowViewState.IdRef="StateMachine_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -1719,7 +1719,7 @@ Select Faults_Update.Rows.Add({a,xCount})
                           </sap:WorkflowViewStateService.ViewState>
                           <Transition.Condition>[TransactionItem IsNot Nothing]</Transition.Condition>
                           <Transition.To>
-                            <State x:Name="__ReferenceID10" sap2010:Annotation.AnnotationText="Process a single transaction. &#xA;The result of the processing can be: 1) Success, 2) Business Exception, 3) System Exception. &#xA;In the case of a system exception, the transaction can be automatically retried." DisplayName="Process Transaction - PPT Data" sap:VirtualizedContainerService.HintSize="564,1376" sap2010:WorkflowViewState.IdRef="State_6">
+                            <State x:Name="__ReferenceID10" sap2010:Annotation.AnnotationText="Process a single transaction. &#xA;The result of the processing can be: 1) Success, 2) Business Exception, 3) System Exception. &#xA;In the case of a system exception, the transaction can be automatically retried." DisplayName="Process Transaction - PPT Data" sap:VirtualizedContainerService.HintSize="231,187" sap2010:WorkflowViewState.IdRef="State_6">
                               <State.Entry>
                                 <TryCatch DisplayName="Try to process transaction" sap:VirtualizedContainerService.HintSize="518,932" sap2010:WorkflowViewState.IdRef="TryCatch_17">
                                   <sap:WorkflowViewStateService.ViewState>
